--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
+  "include": [
+    "src/**/*"
+  ],
   "ts-node": {
     "transpileOnly": true
   }
