--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "license": "MIT",
   "scripts": {
     "bundle": "esbuild src/action.ts --bundle --minify --platform=node --outfile=bundle.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "mocha"
   },
   "devDependencies": {
     "@types/marked": "^4.0.8",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.18",
     "esbuild": "^0.16.12",
     "husky": "^8.0.0",
     "marked": "^4.2.5",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "dependencies": {
